# ibc

./: .env  .gitignore  Cargo.toml  README.md  aipdoc.md  init_rc_ms.fish  run_test.fish  run_test.nu  run_user.fish  test_api.fish  user_key.json
aaka_ms_server/: Cargo.toml  config.json  ms_state.json  test_ms_state.json
aaka_ms_server/src/: main.rs
aaka_rc_app/: Cargo.toml  config.json
aaka_rc_app/src/: lib.rs  main.rs  telemetry.rs  util.rs
aaka_user_app/: Cargo.toml  config.json  user_key.json
aaka_user_app/src/: main.rs
ibc_aaka_scheme/: Cargo.toml
ibc_aaka_scheme/src/: hash_utils.rs  lib.rs  rc.rs  server.rs  user.rs
temp/: config.json  lib.rs
