[package]
name = "aaka_ms_server"
version = "0.1.0"
edition = "2024"

[dependencies]
ibc_aaka_scheme = { path = "../ibc_aaka_scheme" }
tokio = { version = "1", features = ["full"] }
axum = "0.8" # Use Axum 0.7.x (latest as of writing might be different)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For JSON request/response bodies
anyhow = "1.0"     # For simplified error handling
rand = "0.8"
hex = "0.4"        # For potentially encoding keys if needed for display
bincode = "1.3"    # For saving/loading keys/params to file
ark-serialize = { version = "0.4.0", features = [
  "derive",
] } # Serialization for arkworks types
ark-std = "0.4.0"
parking_lot = "0.12"

# Add logging (optional but highly recommended for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
reqwest = { version = "0.12.15", features = ["json"] }
