[package]
name = "aaka_rc_app"
version = "0.1.0"
edition = "2024"

[dependencies]
ibc_aaka_scheme = { path = "../ibc_aaka_scheme" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = [
  "macros",
] } # Use Axum 0.7.x (latest as of writing might be different)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For JSON request/response bodies
# anyhow = "1.0" # For simplified error handling
rand = "0.8"
hex = "0.4" # For potentially encoding keys if needed for display
bincode = "1.3" # For saving/loading keys/params to file
ark-serialize = { version = "0.4.0", features = [
  "derive",
] } # Serialization for arkworks types
ark-std = "0.4.0"
parking_lot = "0.12"

# Add logging (optional but highly recommended for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

dotenvy = "0.15"
blahaj = "0.6.0"
reqwest = "0.12.19"
figment = { version = "0.10.19", features = ["env", "json"] }
tracing-error = "0.2.1"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-appender = "0.2.3"
eyre = "0.6.12"
color-eyre = "0.6.5"

[features]
debug = []
