[package]
name = "aaka_user_app"
version = "0.1.0"
edition = "2024"

[dependencies]
ibc_aaka_scheme = { path = "../ibc_aaka_scheme" }
tokio = { version = "1", features = ["full"] } # Need tokio for async main and networking
reqwest = { version = "0.12", features = ["json"] } # HTTP Client to talk to RC/MS
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
dotenvy = "0.15" # Maybe load RC/MS addresses from .env
ark-serialize = "0.4.0" # Ensure compatible version
ark-std = "0.4.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = { version = "0.8.4", features = ["macros"] }
aide = { version = "0.15.0", features = ["axum"] }
aes-gcm = "0.10.3"
