[package]
name = "ibc_aaka_scheme"
version = "0.1.0"
edition = "2024"
[dependencies]
# --- Cryptography Backend (arkworks-rs) ---
ark-bls12-381 = "0.4.0" # BLS12-381 curve specifics
ark-ec = "0.4.0" # Elliptic Curve operations trait
ark-ff = "0.4.0" # Finite Field traits
ark-std = { version = "0.4.0" } # Standard library + RNG integration
ark-serialize = { version = "0.4.0", features = [
  "derive",
] } # Serialization for arkworks types

# # --- Pairing Engine ---
# ark-pairing = "0.4.0" # Pairing traits

# --- Hashing ---
sha3 = "0.10.8"   # SHA-3 hash function
digest = "0.10.7" # Generic trait for hash functions

# --- Random Number Generation ---
rand = "0.8.5"

# --- Serialization ---
serde = { version = "1.0.197", features = ["derive"] }
# bincode = "1.3.3"

# --- Error Handling (Optional but recommended) ---
thiserror = "1.0.58"

# --- Hex Encoding for Debugging (Optional) ---
hex = "0.4.3"
